--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url(Femi-4.jpg);
+    background-image: url(femi.jpg);
     background-size: cover;
     background-position: center;
     height: 100vh;
